<resources>
    <string name="app_name">Peritagem</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="str_image_path" />
    <string name="str_image_google_drive" />
    <string name="str_select_image" />
    <string name="title_activity_sign_up">Cadastro</string>
    <string name="title_activity_main">Menu Principal</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_new_password">Nova senha</string>
    <string name="action_sign_in">Efectuar Login</string>
    <string name="action_link">Associar Login convencional</string>
    <string name="action_unlink">Desassociar Login convencional</string>
    <string name="action_sign_in_facebook">Login com Facebook</string>
    <string name="action_link_facebook">Associar Facebook login</string>
    <string name="action_unlink_facebook">Desassociar Facebook login</string>
    <string name="action_sign_in_google">Login com Google</string>
    <string name="action_link_google">Associar Google login</string>
    <string name="action_unlink_google">Desassociar Google login</string>
    <string name="action_sign_in_twitter">Login com Twitter</string>
    <string name="action_link_twitter">Associar Twitter login</string>
    <string name="action_unlink_twitter">Desassociar Twitter login</string>
    <string name="action_sign_in_github">Login com GitHub</string>
    <string name="action_link_github">Associar GitHub login</string>
    <string name="action_unlink_github">Desassociar GitHub login</string>
    <string name="action_sign_up">Registrar</string>
    <string name="action_sign_up_call">Registrar</string>
    <string name="action_reset_call">Esqueceu a sua senha? Clique Aqui!</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up_short">Registro</string>
    <string name="error_invalid_email">O endereço de email é inválido</string>
    <string name="error_invalid_password">A password é demasiadamente curta</string>
    <string name="error_incorrect_password">A password é incorrecta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="update_profile">Atualizar Nome</string>
    <string name="reset">Recuperar senha</string>
    <string name="update_nome">Atualizar Nome</string>
    <string name="update_login">Atualizar Email</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="update_password">Atualizar Senha</string>
    <string name="link_accounts">Associar Contas </string>
    <string name="remove_user">Remover Conta</string>
    <string name="details_user">Detalhes da Conta</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update">Actualizar Nome</string>
    <string name="title_activity_update_login">Actualizar Email</string>
    <string name="title_activity_update_password">Actualizar Senha</string>
    <string name="title_activity_link_accounts">Associar contas</string>
    <string name="title_activity_historico">Histórico de Itinerarios</string>
    <string name="title_activity_viagens">Viagens de Autocarros</string>
    <string name="title_activity_remove_user">Remover Utilizador</string>
    <string name="title_activity_details_user">Detalhes da Conta</string>
    <string name="password_info">Para prosseguir com a atualização informe abaixo sua senha.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="txtlinha">_______________</string>
    <string name="nova_participa_o">NOVA PARTICIPAÇÂO</string>
    <string name="txtlinha2">___________________</string>
    <string name="preencha_os_dados_do_sinistro_antes_de_enviar_a_participacao">Preencha os dados do sinistro antes de enviar a participacao</string>
    <string name="detalhes_do_acidente">Detalhes do Acidente</string>
    <string name="enviar">Enviar</string>
    <string name="todo">TODO</string>
    <string name="para_visualizar_clique_no_registro_do_sinistro">Para Visualizar clique no Registro do Sinistro</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="registrar_ocorr_ncia">Registrar Ocorrência</string>
    <string name="hist_rico_de_ocorr_ncias">Histórico de Ocorrências</string>
    <string name="traco">___________________</string>
    <string name="detalhes_do_ve_culo_terceiro_e_condutor">Detalhes do veículo Terceiro e Condutor</string>
    <string name="empresa_seguradora_dos_ve_culos">Empresa Seguradora dos Veículos:</string>
    <string name="gravar">Gravar</string>
    <string name="endere_o_da_seguradora">Endereço da Seguradora:</string>

</resources>
