<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_participacao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patricioeinstein.peritagem.NovoActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:scaleType="center"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:src="@mipmap/emose"
            android:layout_weight="0.18"
            android:contentDescription="@string/todo" />

        <TextView
            android:text="@string/txtlinha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/black"
            android:layout_weight="0.11" />


        <TextView
            android:text="@string/nova_participa_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:text="@string/txtlinha2"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/preencha_os_dados_do_sinistro_antes_de_enviar_a_participacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            >

            <Button
                android:text="@string/detalhes_do_acidente"
                android:id="@+id/button5"
                android:gravity="center"
                android:textSize="12sp"
                android:onClick="callDetalhes"
                android:textColor="@android:color/white"
                android:theme="@style/btnwhite"
                android:textStyle="normal|bold"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.67"
                android:textAlignment="center"
                android:background="@android:color/holo_red_light"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:theme="@style/btnRed"
            android:textStyle="normal|bold"
            android:onClick=""
            android:text="@string/enviar"
            android:id="@+id/btnEnviarPart"
            tools:background="@android:color/holo_red_dark"
            android:layout_margin="4dp"
           />
        <ProgressBar
            android:id="@+id/snackbarp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
        </LinearLayout>
</ScrollView>