<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_below="@+id/logo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/menuItens"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#31ffffff"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/bem_vindo"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"

                android:textColor="#ff3d3d"
                android:textStyle="bold|italic"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/txtNomeUt"
                android:textColor="#277123"
                android:textStyle="bold|italic"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="200px"
                android:layout_height="150px"
                android:onClick="callRegistro"
                android:id="@+id/btnRegistro"
                android:textColor="#000000"
                android:background="@mipmap/registro"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/registrar_ocorr_ncia"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView18" />

            <Button
                android:layout_width="200px"
                android:layout_height="150px"
                android:id="@+id/btnHistorico"
                android:onClick="callHistorico"
                android:background="@mipmap/acident"
                android:textColor="#000000"
                android:textAlignment="inherit"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hist_rico_de_ocorr_ncias"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView19" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>